<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- mark favourite message -->
    <string name="successful">Successfully marked as favourites</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="api_key">AIzaSyAKCODXR2MQU8kd30dNwZ8iFybv9btnMbE  </string>
    <string name="app_name">EZ GO RELOAD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">674632155971845</string>
    <string name="facebook_app_id_test">175703936145004</string>

    <!-- Error Messages -->
    <string name="error_passwords_do_not_match">Passwords do not match.</string>
    <string name="error_could_not_connect">Could not connect to server. Please try again later.</string>
    <string name="error_cannot_create_account">Account already exists!</string>
    <string name="error_cannot_sign_in">Please provide correct Email and Password</string>
    <string name="crash_toast_text">Sorry for inconvenience, we will get this issue fixed!</string>
    <string name="msg_connection_failed">Error! Connection to server failed.</string>
    <string name="msg_connection_error">Please check your internet connection</string>

    <!-- Date Time -->
    <string name="common.months">months</string>
    <string name="common.weeks">weeks</string>
    <string name="common.days">days</string>
    <string name="common.hrs">hrs</string>
    <string name="common.mins">mins</string>
    <string name="common.secs">secs</string>
    <string name="common.ago">ago</string>

    <!-- AnyTextView -->
    <string name="typeface_not_found">Typeface %$1 not found, or could not be loaded.
        Showing default typeface.</string>
    <string name="app">AnyTextView</string>
    <string name="assets_fonts_folder">fonts/</string>
    <string name="txt_enter_phone_no">Enter Phone No.</string>
    <string name="txt_enter_email_address">Enter Email Address <font fgcolor="#75000000">(Optional)</font></string>
    <string name="txt_register_text">Verificaion process is required to verify the phone no.</string>
    <string name="message_quit">Are you sure you want to exit?</string>
    <string name="message_wait">Please wait while data is loading.</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_here">  Click Here</string>
    <string name="imgdesc_signup">Sign Up</string>
    <string name="imgdesc_signin">Sign In</string>
    <string name="back_to_login"><u>Back to Login</u></string>
    <string name="remember_me">remember me</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="categories">Categories</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="search_hint">Search Ads, User or Category</string>
    <string name="password_sent">Your password will be sent to your \nemail address</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="reason_for_rejection">REASON</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="via_email">Via Email</string>
    <string name="via_sms">Via SMS</string>
    <string name="tell_a_friend">TELL A FRIEND</string>
    <string name="contact_email">contact@voltas.com</string>
    <string name="contact_phone">5555 555 555</string>
    <string name="enter_text">Enter Text</string>
    <string name="you_paid">YOU PAID</string>
    <string name="tap_to_rate">TAP A STAR TO RATE DRIVER</string>
    <string name="contact_address">Columbus College of Arts, New York</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and types
        etting industry. Lorem Ipsum has been the industrys standard dummy text ever sinc
        e the 1500s, when an unknown printer took a galley of type and scrambled it t
        o make a type specimen book. It has survived not only five centuries, but
         also the leap into electronic typesetting, remaining essentially unchanged
         . It was popularised in the 1960s with the release of Letraset sheets cont
         aining Lorem Ipsum passages, and more recently with desktop publishing so
         ftware like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="this_is_login_fragment">This is Login Fragment</string>
    <string name="connection_lost">No Internet Found</string>
    <string name="username_account_id">Username, Account ID</string>
    <string name="pin">Pin</string>
    <string name="account_log_in">Account Log In</string>
    <string name="enter_valid_username">Enter Valid User Name</string>
    <string name="enter_Pin">Enter Pin</string>
    <string name="pinlenght">Enter Valid Pin</string>
    <string name="reset_pin_message">Reset pin has been sent to your email address.</string>
    <string name="reset_pin">Reset Pin</string>

    <string name="plate">Plate #</string>
    <string name="year">Year</string>
    <string name="fl">FL</string>
    <string name="make">Make</string>
    <string name="moel">Model</string>
    <string name="color">Color</string>
    <string name="own_vehicle">Own Vehicle</string>
    <string name="rental_vehicle">Rental Vehicle</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="submit_information">Submit Information</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="no">No.</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_list">Credit Card List</string>

    <string name="welcome_to_our_app">Welcome to our app!</string>
    <string name="add_credits">Account Credits</string>
    <string name="account_overview">Account\nOverview</string>
    <string name="vehicles">Vehicles</string>
    <string name="payment_options">Payment\nOptions</string>
    <string name="user_info">User Info</string>
    <string name="transponders">Transponders</string>

    <string name="add_credit">Add Credits</string>
    <string name="top_up_amount">Top Up Amount</string>
    <string name="recharge_account">Recharge Account</string>
    <string name="user_profile">User Profile</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="mobile">Mobile</string>
    <string name="recieve_receipts_and_newsletter_on_email">Recieve Receipts and Newsletter on Email</string>
    <string name="send_monthly_billing_statements">Send Monthly Billing Statements</string>
    <string name="name">Name</string>
    <string name="signup">Signup</string>

    <string name="payment_method">Payment Method</string>
    <string name="Account_Overview">Account Overview</string>
    <string name="Home">Home</string>
    <string name="payment_history">Payment History</string>

    <string name="delete_card_message">Do you want to delete this Credit Card</string>
    <string name="delete_card">Delete Credit Card</string>
    <string name="transponders_nid">Transponders \n ID</string>
    <string name="selected_name">Selected \n Name</string>
    <string name="transponders_status">Transponders \n Status</string>
    <string name="transponder_list">Transponders</string>
    <string name="delete_Transponder_message">Do you want to delete this Transponder</string>
    <string name="delete_transponder">Delete Transponder</string>
    <string name="search">Search</string>
    <string name="paymentoptions">Payment Options</string>
    <string name="user_information">User Information</string>
    <string name="logout">Logout</string>
    <string name="vehicle_overview">Vehicle\'s Overview</string>
    <string name="delete_vehicle_message">Do you want to delete this Vehicle</string>
    <string name="delete_vehicle">Delete Vehicle</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="credit_used">Credit Used</string>
    <string name="status">Status</string>
    <string name="edit_message">Do you want to Edit</string>
    <string name="edit_item">Edit Vehicle</string>
    <string name="edit_item_transponder">Edit Transponder</string>
    <string name="edit_item_card">Edit Credit Card</string>
    <string name="credit_nleft">Credit\nLeft</string>
    <string name="location">Location</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="charged_credit">Charged\nCredit</string>
    <string name="select_date_range">Select Date Range</string>

    <string name="pay_by_new_card">Pay by New Card</string>
    <string name="pay_by_existing_card">Pay by Existing Card</string>
    <string name="card_number">Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="cvv2_code">CVV2 Code</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="replace_credit_card_on_payment">Replace Credit Card on Payment</string>
    <string name="submit">Submit</string>
    <string name="card_1">Card-1</string>
    <string name="card_2">Card-2</string>
    <string name="card_3">Card-3</string>
    <string name="pay">Pay</string>
    <string name="_45">$45</string>
    <string name="total_payment">Total Payment</string>
    <string name="adds_credits">Add Credits</string>


</resources>