<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/x10"
        android:orientation="horizontal">
        <com.ingic.ezgoreload.ui.views.AnyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:gravity="center"
            android:text="@string/select_date_range"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/x20"
            app:typeface="Roboto-Bold.ttf" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x55"
        android:orientation="horizontal"
        android:background="@color/color_list_header"
        android:gravity="center">
        <com.ingic.ezgoreload.ui.views.AnyTextView
            android:id="@+id/txt_Snumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
            android:gravity="center"
            android:hint="@string/date"

            android:textColor="@color/black"

            android:textColorHint="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf" />
        <com.ingic.ezgoreload.ui.views.AnyTextView
            android:id="@+id/txt_card_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"

            android:gravity="center"
            android:hint="@string/time"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf" />
        <com.ingic.ezgoreload.ui.views.AnyTextView
            android:id="@+id/txt_card_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
            android:gravity="center"
            android:hint="@string/location"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf" />
        <com.ingic.ezgoreload.ui.views.AnyTextView
            android:id="@+id/txt_credit_charge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
            android:gravity="center"
            android:hint="@string/charged_credit"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf" />
        <com.ingic.ezgoreload.ui.views.AnyTextView
            android:id="@+id/txt_credit_left"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:alpha="0.8"
            android:gravity="center"
            android:hint="@string/credit_nleft"

            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="@dimen/x15"
            app:typeface="Roboto-Regular.ttf" />
    </LinearLayout>
    <ListView
        android:id="@+id/listView_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>